<resources>
    <string name="app_name">Fitness App</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="DrawerDesc">DrawerMenuIcon</string>
    <string name="DrawerText">Drawer Header</string>
    <string name="main">Główne</string>
    <string name="profile">Profil</string>
    <string name="home">Strona główna</string>
    <string name="plans">Plany</string>
    <string name="creator">Kreator Planów</string>
    <string name="creatorFromZero">Kreator Planów Od Zera</string>
    <string name="add">Dodaj dane</string>
    <string name="choose">Wybór Planów</string>
    <string name="remove">Usuń Plan</string>
    <string name="logout">Wyloguj</string>

    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="saveData">Zapisz Dane</string>
    <string name="fillData">Uzupełnij Dane</string>
    <string name="start">Start</string>
    <string name="target">Cel</string>
    <string name="weight">Waga</string>
    <string name="biceps">Obwód bicepsa</string>
    <string name="waist">Obwód pasa</string>
    <string name="login">Zaloguj się</string>
    <string name="password">Hasło</string>
    <string name="email">E-mail</string>
    <string name="loginV2">Logowanie</string>
    <string name="loginIcon">Login Icon</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="register">Zarejestruj się</string>
    <string name="registerV2">Rejestracja</string>
    <string name="planTitle">Nazwa planu</string>
    <string name="next">Dalej</string>
    <string name="save">Zapisz</string>
    <string name="back">Cofnij</string>
    <string name="exDescription">Opisz swoje ćwiczenie</string>
    <string name="brakKonta">Nie masz jeszcze konta? <font fgcolor='#01C6DB'>Zarejestruj się</font></string>
    <string name="posiadaKonto">Masz już konto? <font fgcolor='#01C6DB'>Zaloguj się</font></string>
    <string name="zapomnialemHaslo"><font fgcolor='#F5372A'>Zapomniałem hasła</font></string>

    <string name="ex1">Ćwiczenie pierwsze</string>
    <string name="ex2">Ćwiczenie drugie</string>
    <string name="ex3">Ćwiczenie trzecie</string>
    <string name="ex4">Ćwiczenie czwarte</string>
    <string name="ex5">Ćwiczenie piąte</string>
    <string name="ex6">Ćwiczenie szóste</string>
    <string name="ex7">Ćwiczenie siódme</string>
    <string name="ex1Number">Ćwiczenie 1</string>
    <string name="exNum">Numer ćwiczenia</string>
    <string name="end">Koniec</string>
    <string name="text">Treść</string>
    <string name="update">Aktualizuj</string>
    <string name="placeholder">Data</string>

    <string name="userIcon">Zdjęcie użytkownika</string>
    <string name="progress">Twoje postępy</string>
    <string name="yourWeigth">Twoja waga</string>
    <string name="yourWaist">Twój obwód pasa</string>
    <string name="yourBiceps">Twój biceps</string>
    <string name="training">Trening</string>
    <string name="checkBox">Checkbox</string>
    <string name="removePlans">Wybierz plany, które chcesz usunąć</string>
    <string name="number">Numer</string>
    <string name="planNumber">Podaj numer planu</string>
    <string name="motivation">Jedyną osobą, która może cię zmotywować jesteś ty sam!</string>
    <string name="backgroundName">backgroundImage</string>
    <string name="addEx">Dodaj ćwiczenie</string>
</resources>
