<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".Plany">


    <TextView
        android:id="@+id/CwiczenieNumer2"
        android:layout_width="238dp"
        android:layout_height="50dp"
        android:background="@drawable/tv_shape"
        android:gravity="center"
        android:text="@string/exNum"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/CwiczenieOpis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

    <TextView
        android:id="@+id/CwiczenieOpis"
        android:layout_width="242dp"
        android:layout_height="343dp"
        android:background="@drawable/tv_shape"
        android:gravity="center"
        android:shadowColor="@color/colorLogin3"
        android:text="@string/text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <Button
        android:id="@+id/Nastepne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CwiczenieOpis" />

    <TextView
        android:id="@+id/NazwaPlanu2"
        android:layout_width="232dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/planTitle"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/tv_shape"
        app:layout_constraintBottom_toTopOf="@+id/CwiczenieNumer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />
</androidx.constraintlayout.widget.ConstraintLayout>