<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kreator">
    <include layout="@layout/drawer_toolbar" />

    <EditText
        android:id="@+id/NazwaPlanu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/planTitle"
        app:layout_constraintBottom_toTopOf="@+id/Cwiczenie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/Cwiczenie"
        android:layout_width="216dp"
        android:layout_height="362dp"
        android:ems="10"
        android:hint="@string/exDescription"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/Zapisz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cwiczenie"
        app:layout_constraintVertical_bias="0.76" />

    <Button
        android:id="@+id/Dalej"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/Zapisz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cwiczenie" />

    <TextView
        android:id="@+id/CwiczenieNumer"
        android:layout_width="145dp"
        android:layout_height="24dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/Cwiczenie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NazwaPlanu" />
</androidx.constraintlayout.widget.ConstraintLayout>